pathbased-ingressrules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressname
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskhello
            port:
              number: 80
      - path: /alexa
        pathType: Prefix
        backend:
          service:
            name: flask-greet
            port:
              number: 80
